--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "startWebsite": "parcel website/index.html",
     "buildWebsite": "rm -r dist && parcel build website/index.html --no-source-maps",
+    "deployWebsite": "npm run buildWebsite && up deploy production",
     "startExtension": "parcel watch extension/src/index.js -d extension/build",
     "buildExtension": "rm -r extension/build && parcel build extension/src/index.js -d extension/build --no-source-maps"
   },
@@ -20,12 +21,11 @@
   "author": "timqian",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.9.1",
-    "corner-notie": "^1.2.0",
-    "d3": "^3.5.6",
-    "nvd3": "^1.8.1"
+    "axios": "^0.19.0",
+    "chart.xkcd": "^1.0.10",
+    "notie": "^4.3.1"
   },
   "devDependencies": {
-    "parcel": "^1.11.0"
+    "parcel": "^1.12.3"
   }
 }
