--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "author": "timqian",
-  "homepage_url": "https://github.com/timqian/star-history-plugin",
+  "author": "bytebase",
+  "homepage_url": "https://github.com/bytebase/star-history-plugin",
   "name": "Star History",
   "description": "A chrome extension showing star history graph of current github repository",
   "version": "1.5",
@@ -12,9 +12,5 @@
     "default_icon": "./assets/ico.png",
     "default_popup": "popup.html"
   },
-  "permissions": [
-    "tabs",
-    "activeTab",
-    "https://api.github.com/"
-  ]
+  "permissions": ["tabs", "activeTab", "https://api.github.com/"]
 }
