--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "author": "bytebase",
   "homepage_url": "https://github.com/bytebase/star-history-plugin",
-  "name": "Star History",
-  "description": "A chrome extension showing star history graph of current github repository",
+  "name": "GitHub Star History",
+  "description": "A chrome extension showing star history graph of current GitHub repository",
   "version": "1.5",
   "icons": {
     "128": "assets/ico.png"
