--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "author": "bytebase",
   "homepage_url": "https://github.com/bytebase/star-history-plugin",
-  "name": "GitHub Star History",
+  "name": "Star History",
   "description": "A chrome extension showing star history graph of current GitHub repository",
   "version": "1.5",
   "icons": {
