--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "star_history",
-  "version": "1.0.0",
-  "description": "The missing star history graph of github projects",
-  "main": "index.js",
+  "name": "star-history",
+  "version": "0.0.0",
   "scripts": {
-    "startWebsite": "parcel website/index.html",
-    "buildWebsite": "parcel build website/index.html --no-source-maps",
-    "startExtension": "parcel watch extension/src/index.js -d extension/build",
-    "buildExtension": "rm -r extension/build && parcel build extension/src/index.js -d extension/build --no-source-maps"
+    "dev": "vite",
+    "build": "vite build --mode browser",
+    "build:ex": "vite build --mode extension && node ./scripts/copyExtFiles.js",
+    "preview": "vite preview"
   },
-  "keywords": [
-    "github",
-    "star",
-    "history"
-  ],
-  "browserslist": [
-    "since 2017-06"
-  ],
-  "author": "timqian",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.1",
-    "chart.xkcd": "^1.0.10",
-    "d3": "^3.5.17",
-    "notie": "^4.3.1",
-    "nvd3": "^1.8.6"
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vue": "^3.2.25",
+    "vue-tsc": "^0.29.8"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.6.3",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "parcel": "1.12.3"
-  }
+    "@types/chrome": "^0.0.171",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.1.1",
+    "postcss": "^8.4.5",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^3.0.7"
+  },
+  "eslintIgnore": [
+    "src/extension/background.js"
+  ]
 }
