--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:ext": "vite build --mode extension && node ./scripts/copyExtFiles.js",
-    "preview": "vite preview"
+    "build:ext": "vite build --mode extension && node ./scripts/copyExtFiles.js"
   },
   "dependencies": {
     "chart.xkcd": "^1.1.13",
+    "tailwindcss": "^3.0.7",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue": "^3.2.25",
@@ -27,10 +27,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "postcss": "^8.4.5",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^3.0.7"
-  },
-  "eslintIgnore": [
-    "src/extension/background.js"
-  ]
+    "prettier": "^2.4.1"
+  }
 }
