--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue": "^3.2.25",
+    "vue-router": "4",
     "vue-tsc": "^0.29.8",
     "vuex": "^4.0.2"
   },
