rewrite xkcd XY chart in ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "checkJs": false,
     "lib": ["esnext", "dom"]
   },
