--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build:ext": "vite build --mode extension && node ./scripts/copyExtFiles.js"
   },
   "dependencies": {
+    "d3": "^7.2.1",
+    "dayjs": "^1.10.7",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.171",
+    "@types/d3": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
