--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build:ext": "vite build --mode extension && node ./scripts/copyExtFiles.js"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
+    "@tryghost/content-api": "^1.5.16",
     "d3": "^7.2.1",
     "dayjs": "^1.10.7",
     "pinia": "^2.0.9",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.171",
     "@types/d3": "^7.1.0",
+    "@types/tryghost__content-api": "^1.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
