--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Star History",
   "description": "A chrome extension showing star history graph of current GitHub repository",
-  "homepage_url": "https://github.com/bytebase/star-history-plugin",
+  "homepage_url": "https://github.com/bytebase/star-history",
   "author": "bytebase",
   "version": "2.0",
   "manifest_version": 3,
@@ -12,5 +12,8 @@
     "default_popup": "./extension/popup.html"
   },
   "host_permissions": ["https://api.github.com/"],
+  "icons": {
+    "128": "icon.png"
+  },
   "permissions": ["tabs", "activeTab"]
 }
