--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.0",
     "@tryghost/content-api": "^1.5.16",
+    "d3": "^7.3.0",
+    "dayjs": "^1.10.7",
     "pinia": "^2.0.9",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue": "^3.2.25",
     "vue-router": "4",
-    "vue-tsc": "^0.29.8",
-    "xy-chart": "file:./packages/xy-chart"
+    "vue-tsc": "^0.29.8"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.171",
+    "@types/d3": "^7.1.0",
     "@types/node": "^17.0.12",
     "@types/tryghost__content-api": "^1.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
