--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.0",
     "@tryghost/content-api": "^1.5.16",
-    "d3": "^7.3.0",
+    "d3-axis": "^1.0.12",
+    "d3-scale": "^3.2.0",
+    "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
     "dayjs": "^1.10.7",
     "pinia": "^2.0.9",
     "tailwindcss": "^3.0.7",
@@ -24,7 +27,10 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.171",
-    "@types/d3": "^7.1.0",
+    "@types/d3-axis": "^1.0.12",
+    "@types/d3-scale": "^3.2.0",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-shape": "^1.3.7",
     "@types/node": "^17.0.12",
     "@types/tryghost__content-api": "^1.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
