--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,23 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "dayjs": "^1.10.7",
-    "jsdom": "^19.0.0",
-    "ts-node": "^10.4.0",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.0",
     "d3-selection": "^1.4.1",
-    "d3-shape": "^1.3.7"
+    "d3-shape": "^1.3.7",
+    "dayjs": "^1.10.7",
+    "jsdom": "^19.0.0",
+    "koa": "^2.13.4",
+    "koa-router": "^10.1.1",
+    "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@types/d3-axis": "^1.0.12",
     "@types/d3-scale": "^3.2.0",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.7",
-    "@types/jsdom": "^16.2.14"
+    "@types/jsdom": "^16.2.14",
+    "@types/koa": "^2.13.4",
+    "@types/koa-router": "^7.4.4"
   }
 }
