--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,14 @@
     "jsdom": "^19.0.0",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
+    "lru-cache": "^7.3.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
     "@types/koa": "^2.13.4",
-    "@types/koa-router": "^7.4.4"
+    "@types/koa-router": "^7.4.4",
+    "@types/lru-cache": "^5.1.1"
   }
 }
