--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "koa-router": "^10.1.1",
     "lru-cache": "^7.3.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
