--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:server": "yarn && cd server && yarn && yarn build",
+    "build:server": "pnpm i && cd server && pnpm i && pnpm build",
     "build:ext": "vite build --mode extension"
   },
   "dependencies": {
