--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "dayjs": "^1.10.7",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.11",
     "tailwindcss": "^3.0.19",
     "typescript": "^4.4.4",
@@ -33,6 +34,7 @@
     "@types/d3-scale": "^3.2.0",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.7",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.12",
     "@types/tryghost__content-api": "^1.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
