--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.1",
-    "@tryghost/content-api": "^1.6.0",
     "axios": "^0.26.0",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.0",
@@ -20,6 +19,7 @@
     "d3-shape": "^1.3.7",
     "dayjs": "^1.10.7",
     "lodash-es": "^4.17.21",
+    "marked": "^4.0.16",
     "pinia": "^2.0.11",
     "tailwindcss": "^3.0.19",
     "typescript": "^4.4.4",
@@ -35,8 +35,8 @@
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.7",
     "@types/lodash-es": "^4.17.6",
+    "@types/marked": "^4.0.3",
     "@types/node": "^17.0.12",
-    "@types/tryghost__content-api": "^1.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
