--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:server": "pnpm i && cd server && pnpm i && pnpm build",
-    "build:ext": "vite build --mode extension"
+    "build:extension": "vite build --mode extension"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
