--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.16",
     "pinia": "^2.0.11",
