--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "jsdom": "^19.0.0",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
+    "lodash": "^4.17.21",
     "lru-cache": "^7.3.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
