--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.1",
+    "@types/lodash": "^4.14.182",
     "axios": "^0.26.0",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.0",
