--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.1",
+    "@vueuse/head": "^1.0.25",
     "axios": "^1.0.0",
     "d3-axis": "^1.0.12",
     "d3-scale": "^3.2.0",
@@ -24,7 +25,7 @@
     "tailwindcss": "^3.0.19",
     "typescript": "^4.4.4",
     "vite": "^2.8.0",
-    "vue": "^3.2.30",
+    "vue": "^3.2.47",
     "vue-router": "4",
     "vue-tsc": "^1.0.0"
   },
