--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,12 @@
     "moduleResolution": "node",
     "strict": false,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["./*.ts", "../common/*.ts", "../packages/**/*.ts", "../types/*.ts"]
+  "include": [
+    "./*.ts",
+    "../common/*.ts",
+    "../packages/**/*.ts",
+    "../types/*.ts"
+  ]
 }
