chore: specify min node version to fix pnpm node version error in render

--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "eslint-plugin-vue": "9.7.0",
     "postcss": "8.4.19",
     "prettier": "2.7.1"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
