--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,12 +18,14 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^4.8.4"
+    "ts-loader": "^9.5.0",
+    "typescript": "^4.9.5"
   }
 }
