--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "lodash": "^4.17.21",
+    "marked": "^9.1.5",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
