--- a/package.json
+++ b/package.json
@@ -10,23 +10,36 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.3",
+    "d3-axis": "^3.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "marked": "^9.1.5",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "pinia": "^2.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-github-btn": "^1.4.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/lodash": "^4.14.200",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "ts-loader": "^9.5.0",
     "typescript": "^4.9.5"
   }
