--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "marked": "^9.1.5",
-    "next": "latest",
+    "next": "^14.0.4",
     "next-compose-plugins": "^2.2.1",
     "pinia": "^2.1.7",
     "react": "^18.2.0",
@@ -34,8 +34,8 @@
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
     "@types/lodash": "^4.14.200",
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.0.23",
+    "@types/node": "^18.19.4",
+    "@types/react": "^18.2.46",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
