--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
-  },
+    "start": "NODE_ENV=production node server.js"
+  },  
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -17,6 +17,7 @@
     "d3-shape": "^3.2.0",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "express": "^4.18.2",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
