--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
-  },  
+  },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -17,12 +17,13 @@
     "d3-shape": "^3.2.0",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "eslint-config-next": "^14.1.0",
     "express": "^4.18.2",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "marked": "^9.1.5",
-    "next": "^14.0.4",
+    "next": "^14.1.0",
     "next-compose-plugins": "^2.2.1",
     "pinia": "^2.1.7",
     "react": "^18.2.0",
