--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
+    "react-hydration-provider": "^2.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0"
   },
