--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "generate-sitemap": "next-sitemap"
+
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -28,6 +30,7 @@
     "marked": "^9.1.6",
     "next": "^14.1.0",
     "next-compose-plugins": "^2.2.1",
+    "next-sitemap": "^4.2.3",
     "pinia": "^2.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
