--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "generate-sitemap": "next-sitemap"
-
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
