--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "date-fns": "^3.2.0",
         "dayjs": "^1.11.10",
         "eslint-config-next": "^14.1.0",
-        "next-sitemap": "^3.1.29",
         "express": "^4.18.2",
         "gray-matter": "^4.0.3",
         "html2canvas": "^1.4.1",
@@ -30,6 +29,7 @@
         "marked": "^9.1.6",
         "next": "^14.1.0",
         "next-compose-plugins": "^2.2.1",
+        "next-sitemap": "^3.1.29",
         "pinia": "^2.1.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -49,6 +49,7 @@
         "@types/react-dom": "^18.0.7",
         "autoprefixer": "^10.4.16",
         "postcss": "^8.4.32",
+        "prettier": "^3.2.5",
         "tailwindcss": "^3.4.0",
         "ts-loader": "^9.5.0",
         "typescript": "^4.9.5"
