--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@types/d3-shape": "^3.1.6",
         "@types/lodash": "^4.14.200",
         "@types/node": "^18.19.4",
+        "@types/node-fetch": "^2.6.11",
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.0.7",
         "autoprefixer": "^10.4.16",
