--- a/package.json
+++ b/package.json
@@ -1,56 +1,61 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "node server.js",
-        "build": "next build",
-        "start": "NODE_ENV=production node server.js",
-        "lint": "next lint",
-        "prettier": "prettier --write .",
-        "postbuild": "next-sitemap --config next-sitemap.config.js --sitemap-xml",
-        "sitemap": "next-sitemap --config next-sitemap.config.js"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.1",
-        "@fortawesome/free-brands-svg-icons": "^6.4.2",
-        "@fortawesome/free-regular-svg-icons": "^6.4.2",
-        "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "@tailwindcss/typography": "^0.5.10",
-        "axios": "^1.6.3",
-        "d3-axis": "^3.0.0",
-        "d3-scale": "^4.0.2",
-        "d3-selection": "^3.0.0",
-        "d3-shape": "^3.2.0",
-        "dayjs": "^1.11.10",
-        "eslint-config-next": "^14.1.0",
-        "gray-matter": "^4.0.3",
-        "lodash": "^4.17.21",
-        "marked": "^9.1.6",
-        "next": "^14.1.0",
-        "next-compose-plugins": "^2.2.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-github-btn": "^1.4.0",
-        "react-hydration-provider": "^2.1.0",
-        "react-icons": "^4.12.0",
-        "react-router-dom": "^6.17.0"
-    },
-    "devDependencies": {
-        "@types/d3-axis": "^3.0.6",
-        "@types/d3-scale": "^4.0.8",
-        "@types/d3-selection": "^3.0.10",
-        "@types/d3-shape": "^3.1.6",
-        "@types/lodash": "^4.14.200",
-        "@types/node": "^18.19.4",
-        "@types/node-fetch": "^2.6.11",
-        "@types/react": "^18.2.46",
-        "@types/react-dom": "^18.0.7",
-        "autoprefixer": "^10.4.16",
-        "next-sitemap": "^4.2.3",
-        "postcss": "^8.4.32",
-        "prettier": "^3.2.5",
-        "tailwindcss": "^3.4.0",
-        "ts-loader": "^9.5.0",
-        "typescript": "^4.9.5"
-    }
+  "name": "star_history",
+  "version": "1.0.0",
+  "description": "The missing GitHub star history graph of GitHub projects",
+  "main": "index.js",
+  "private": true,
+  "scripts": {
+      "dev": "node server.js",
+      "build": "next build",
+      "start": "NODE_ENV=production node server.js",
+      "lint": "next lint",
+      "prettier": "prettier --write .",
+      "postbuild": "next-sitemap --config next-sitemap.config.js --sitemap-xml",
+      "sitemap": "next-sitemap --config next-sitemap.config.js"
+  },
+  "dependencies": {
+      "@fortawesome/fontawesome-free": "^6.5.1",
+      "@fortawesome/free-brands-svg-icons": "^6.4.2",
+      "@fortawesome/free-regular-svg-icons": "^6.4.2",
+      "@fortawesome/free-solid-svg-icons": "^6.4.2",
+      "@fortawesome/react-fontawesome": "^0.2.0",
+      "@tailwindcss/typography": "^0.5.10",
+      "axios": "^1.6.3",
+      "d3-axis": "^3.0.0",
+      "d3-scale": "^4.0.2",
+      "d3-selection": "^3.0.0",
+      "d3-shape": "^3.2.0",
+      "dayjs": "^1.11.10",
+      "eslint-config-next": "^14.1.0",
+      "find-free-port": "^2.0.0",
+      "gray-matter": "^4.0.3",
+      "lodash": "^4.17.21",
+      "marked": "^9.1.6",
+      "next": "^14.1.0",
+      "next-compose-plugins": "^2.2.1",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-github-btn": "^1.4.0",
+      "react-hydration-provider": "^2.1.0",
+      "react-icons": "^4.12.0",
+      "react-router-dom": "^6.17.0"
+  },
+  "devDependencies": {
+      "@types/d3-axis": "^3.0.6",
+      "@types/d3-scale": "^4.0.8",
+      "@types/d3-selection": "^3.0.10",
+      "@types/d3-shape": "^3.1.6",
+      "@types/lodash": "^4.14.200",
+      "@types/node": "^18.19.4",
+      "@types/node-fetch": "^2.6.11",
+      "@types/react": "^18.2.46",
+      "@types/react-dom": "^18.0.7",
+      "autoprefixer": "^10.4.16",
+      "next-sitemap": "^4.2.3",
+      "postcss": "^8.4.32",
+      "prettier": "^3.2.5",
+      "tailwindcss": "^3.4.0",
+      "ts-loader": "^9.5.0",
+      "typescript": "^4.9.5"
+  }
 }
