--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "koa-router": "12.0.0",
     "lru-cache": "7.14.1",
     "node-fetch": "2.6.7",
+    "svgo": "^3.2.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
     "winston": "3.8.2"
