--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
         "jsdom": "20.0.2",
         "koa": "2.13.4",
         "koa-router": "12.0.0",
-        "lru-cache": "7.14.1",
+        "lru-cache": "^11.0.2",
         "node-fetch": "2.6.7",
         "svgo": "^3.2.0",
         "ts-node": "10.9.1",
@@ -23,7 +23,6 @@
         "@types/koa": "2.13.5",
         "@types/koa-router": "7.4.4",
         "@types/koa__cors": "3.3.0",
-        "@types/lru-cache": "7.10.9",
         "@types/node": "18.11.10",
         "tsx": "^4.19.3"
     }
