--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
         "incremental": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "server"]
 }
