chore: fix backend compile error.
downgrade d3 lib to commonJS compatiable.

Add .jsx suffix

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
+    "resolveJsonModule": true,
+    "allowJs": true
   },
   "include": [
     "./*.ts",
