--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es2015"],
+    "lib": ["esnext"],
     "rootDir": "../",
     "outDir": "dist",
-    "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
     "strict": false,
     "esModuleInterop": true,
