--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
     "main": "index.js",
     "private": true,
     "scripts": {
-        "dev": "node server.js",
-        "build": "next build && next-sitemap",
+        "generate:blog": "npx ts-node scripts/generateBlogJson.mts",
+        "dev": "npm run generate:blog && node server.js",
+        "build": "npm run generate:blog && next build && next-sitemap",
         "start": "NODE_ENV=production node server.js",
         "lint": "next lint",
         "prettier": "prettier --write ."
